ISSUE: PURPOSE: More readable fixed search form, cleanup. DESCRIPTION: White inputs on white background with section separator lines the same weight as input boundaries are unreadable, changing weight of section separator lines, changing form background for odd lines to contrasting color to input backgrounds, and renaming class for odd lines to a more meaningfull name.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1096,10 +1096,11 @@ ul.sd li.list-group-item:last-child {
 	border-radius: 4px;
 	margin-top: 0px;
 }
-.search-header-basic {
-	background-color: #ffffff!important;
-	border-bottom: 2px solid #ededed!important;
-	border-top: 2px solid #ededed!important;
+.search-form-basic-odd {
+   /* odd rows in the basic specimen search form */
+	background-color: #eaf8ff!important;
+	border-bottom: 2px solid #d7d7d7!important;
+	border-top: 2px solid #d7d7d7!important;
 }
 /*I don't know that this is needed.  I used bootstrap styles.*/
 .jqx-grid-load {
